@@ -1,4 +1,5 @@
   - Add support for headers exchanges
+  - Add support for making exchanges auto-delete
   - Remove queue_type attribute as there is no such thing in AMQP
 
 0.006  2015-06-26 17:54:00+01:00 Europe/London
